- Rating Start on main page - issue: Lang menu wrong position on first open for Safari

--- a/themes/modern/assets/css/snippet-language-selector.css
+++ b/themes/modern/assets/css/snippet-language-selector.css
@@ -130,6 +130,7 @@ span.select2-container--sellix-lng-selector .select2-dropdown {
 }
 
 .select2-container.select2-container--sellix-lng-selector.select2-container--open {
+  display: block;
   right: 0;
   left: unset !important;
 }
